@@ -4,11 +4,13 @@ SCRIPTS=$(wildcard *.py *.scm)
 
 LILYPONDDIR=$(HOME)/usr/src/lilypond
 LY2DVI=python $(LILYPONDDIR)/scripts/ly2dvi.py
+SCRIPTDIR=./
+
 
 all: scripts menuify
 
 scripts:
-	cd site/about/automated-engraving ; python big-page.py 
+	cd site/about/automated-engraving ; python $(SCRIPTDIR)/big-page.py 
 
 # no silly buttons
 site: tree menuify
@@ -17,7 +19,7 @@ TAGS:
 	etags `find site -name '*.html'`
 
 menuify: tree
-	python format-page.py --outdir out/  `find site -name '*.html'`
+	python $(SCRIPTDIR)/format-page.py --outdir out/  `find site -name '*.html'`
 	for a in `find site -name '*.ly' -or -name '*.png' -or -name '*.jpeg' -or -name '*.pdf'` ; do   ln $$a out/$$a  ;done
 	cd out ; touch .xvpics ; rm -rf `find -name  .xvpics`
 	ln newweb.css out/site
