@@ -10,6 +10,12 @@
       </font>
     </a>
     (latest stable)
+     <li>
+    Documentation for
+    <a href="@DOC@v2.3/Documentation/out-www/">
+    LilyPond 2.3
+    </a>
+    (latest development)
     
      <li>
     Documentation for
@@ -65,4 +71,11 @@ You may have to install a separate package such as <tt>lilypond-doc</tt>.
     <a href="http://mail.gnu.org/mailman/listinfo/lilypond-devel">info</a>,
     search
     <a href="http://mail.gnu.org/archive/html/lilypond-devel/">archive</a>)
-</ul>
+  <li>Keep posted with news.  Subscribe to
+    <tt><a href="mailto:info-lilypond@gnu.org">info-lilypond@gnu.org</a></tt>
+    (mailing list 
+    <a href="http://mail.gnu.org/mailman/listinfo/info-lilypond">info</a>,
+    search
+    <a href="http://mail.gnu.org/archive/html/info-lilypond/">archive</a>)
+
+    </ul>
