@@ -1,3 +1,7 @@
+2004-07-30  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* GNUmakefile: add SCRIPTDIR variable.
+
 2004-07-26  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* site/index.html: workaround for most common browsers.
